# HRS_Project

src/: CMakeLists.txt
src/nao_control/: CMakeLists.txt  package.xml
src/nao_control/launch/: nao.launch
src/nao_control/src/: arucoBroadcast.py  aruco_detector.cpp  bottle_detector.cpp  detection_srv.py  get_head_angle.py  look_around.cpp  main.cpp  move_arms_down.py  move_arms_grasp.py  move_arms_open.py  move_arms_rotate.py  nao_turn_body.cpp  nao_walk.py  nao_walk_backwards.py  nao_walk_with_arms.py  stand_pose.py  walk_to_aruco.py
src/nao_control/srv/: ArucoDetector.srv  ArucoNavigation.srv  BottleDetector.srv  GetPos.srv  LookAround.srv  NaoWalk.srv  NaoWalkWithArms.srv  TurnAround.srv  detection.srv
